@startuml 包裹快递服务系统架构图

skinparam backgroundColor white
skinparam handwritten false
skinparam defaultFontName Microsoft YaHei
skinparam defaultFontSize 14
skinparam roundCorner 10
skinparam shadowing false

!define RECTANGLE class

skinparam package {
  BackgroundColor #EEEEEE
  BorderColor #000000
  FontColor #000000
}

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  FontColor #000000
}

package "Maven项目: Parcel_Express_Service_System" {
      package "源代码结构" {
      package "com.uednd.parcelpost" {
      package "模型层 (Model)" {
        class Package {
          - sender: ParcelContact
          - recipient: ParcelContact
          - packageWeight: double
          - {static} numberOfShippingOrder: int
          + {static} COST_PER_OUNCE: double = 1.16
          + {static} getNumberOfShippingOrder(): int
          + {static} resetOrderCount(): void
          + calculateCost(): double
        }
        
        class TwoDayPackage {
          - flatFlee: double
          + calculateCost(): double
        }
        
        class OvernightPackage {
          - overnightFeePerOunce: double
          + calculateCost(): double
        }
        
        class ParcelContact {
          - name: String
          - address: String
          - city: String
          - state: String
          - postcode: String
          - phoneNumber: String
        }
        
        TwoDayPackage -up-|> Package
        OvernightPackage -up-|> Package
        Package o-- "2" ParcelContact
      }
      
      package "显示层 (Display)" {
        class MenuDisplay {
          + displayMainMenu()
          + displayAddPackageMenu()
          + displayPackageListHeader()
          + displayOrderStatistics()
          + clearScreen()
        }
        
        class PackageInfoDisplay {
          + printShippingOrderInfo()
        }
        
        class InputHandler {
          + getUserChoice()
          + getContactInfo()
          + getPositiveDoubleInput()
        }
        
        class PackageManager {
          + addPackage()
          + displayAllPackages()
          + displayTotalOrders()
        }
      }
      
      class ParcelExpressSystem {
        - packages: ArrayList<Package>
        + main()
      }
    }
  }

  package "测试代码" {
    package "com.uednd.parcelpost.test" {
      class PackageTest {
        + testPackage()
        + testTwoDayPackage()
        + testOvernightPackage()
        + testOrderCount()
      }
      
      class ParcelContactTest {
        + testGetterAndSetter()
        + testToString()
      }
      
      class UseTestCases {
        + testParcelService()
        + printShippingOrderInfo()  // 原PrintUtil功能
        + printTotalOrderCount()    // 原PrintUtil功能
        + main(args: String[])      // 手动运行测试用例
      }
    }
  }
  
  ParcelExpressSystem --> MenuDisplay : 使用
  ParcelExpressSystem --> PackageManager : 使用
  ParcelExpressSystem --> InputHandler : 使用
  PackageManager --> Package : 创建和管理
  PackageManager --> TwoDayPackage : 创建和管理
  PackageManager --> OvernightPackage : 创建和管理
  PackageManager --> PackageInfoDisplay : 使用
  PackageManager --> InputHandler : 使用
  InputHandler --> ParcelContact : 创建
  
  PackageTest ..> Package : 测试
  ParcelContactTest ..> ParcelContact : 测试
  UseTestCases ..> ParcelExpressSystem : 测试
}

note right of "Maven项目: Parcel_Express_Service_System"
  使用Maven管理的标准项目结构
  - pom.xml: 项目配置和依赖管理
  - src/main/java: 主要源代码
  - src/test/java: 测试代码
  - target: 构建输出目录
end note

note bottom of "源代码结构"
  文件系统路径: src/main/java/com/uednd/parcelpost
end note

note bottom of "测试代码"
  文件系统路径: src/test/java/com/uednd/parcelpost
end note

@enduml 